Fix HTML formatting and add missing elements

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Perfil de Ariana Orive -->
         <div class="profile-card">
             <div class="left-section">
-                <img class="profile-image" src="img/ariana_icono.jpg" alt="logo">
+                <img class="profile-image" src="img/Ariana_icono.jpg" alt="logo">
                 <h1 class="profile-name">Ariana Orive</h1>
                 <div class="profile-username">Ariana-Orive</div>
                 <div class="profile-pronouns">she/her</div>
@@ -151,5 +151,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
